fix colors for about on desktop and accoridion on mobile

--- a/styles/less/filters.less
+++ b/styles/less/filters.less
@@ -273,11 +273,11 @@
 /*		margin-left:.42em !important;*/
 		height: 2em;
 		width: 100%;
-		background-color: @color-mid-light-green;
+		background-color: @color-mid-green;
 		transition: all 0.25s ease;
 		border-bottom: .1em white solid;
 		&:hover {
-			background-color: @color-mid-green;
+			background-color: @color-mid-light-green;
 		};
 		.icon {
 			font-size: 12px;
@@ -309,10 +309,10 @@
 		height: 2em;
 		width: 100%;
 		border-bottom: .1em white solid;
-		background-color: @color-mid-light-green;
+		background-color: @color-mid-green;
 		transition: all 0.25s ease;
 		&:hover {
-			background-color: @color-mid-green;
+			background-color: @color-mid-light-green;
 		};
 		.icon {
 			font-size: 12px;
@@ -343,7 +343,7 @@
 		.aboutPageBanner {
 			position: relative;
 			width: 100%;
-			background-color: @color-dark-blue;
+			background-color: @color-mid-green;
 			padding: .5em 1.75em .5em 1.75em;
 		}
 		span {
@@ -438,10 +438,10 @@
 	@media @mobile {
 		height: 2em;
 		width: 100%;
-		background-color: @color-mid-light-green;
+		background-color: @color-mid-green;
 		transition: all 0.25s ease;
 		&:hover {
-			background-color: @color-mid-green;
+			background-color: @color-mid-light-green;
 		};
 		.icon {
 			font-size: 12px;
